syntax = "proto3";

import "google/protobuf/timestamp.proto";
package custom_type.v1;

option csharp_namespace = "DA_GrpcService";


// User services
service CaloriesGrpc {
 
  rpc ListCalories (Empty) returns (CaloriesOut);

}

message Empty
{}

message CaloriesIn 
{
	string UserID = 1;
	google.protobuf.Timestamp startDate = 2;
	google.protobuf.Timestamp endDate = 3;
}

message CaloriesOut {

 	repeated EnergySpentOutType energySpents = 1;
}


message DecimalValue {
    int64 units = 1;
    sfixed32 nanos = 2;
}

message EnergySpentOutType {
	
    string Id = 1 ;
    string UserId = 2;
    string FirstName = 3;
    string LastName = 4;
    DecimalValue Calorie = 5;
    google.protobuf.Timestamp ExecutionDate = 6;
}


